[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/Ships/spaceShips_007.png" type="Texture" id=1]
[ext_resource path="res://FollowTarget.gd" type="Script" id=2]
[ext_resource path="res://Nodes/Agents/EnemyBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/Anim/BlinkRed.tres" type="Animation" id=4]
[ext_resource path="res://Death.tres" type="Animation" id=5]
[ext_resource path="res://Assets/Sounds/explosion01.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource( 2 )
Bullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.755, 0.755 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.568787, -2.27521 )
polygon = PoolVector2Array( -58.9059, -46.0275, -19.4726, -67.8951, 43.6208, -64.6687, 71.9411, -53.1972, 78.3939, -1.57534, 74.092, 42.1598, 54.3753, 70.1217, 17.4514, 77.2914, -29.8687, 73.348, -58.9059, 53.2729, -67.8681, 19.5753, -66.7926, -15.5563 )

[node name="Visibility" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visibility"]
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BlinkRed = ExtResource( 4 )
anims/Death = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
